{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 10,
  "lineage": "4b42173a-619b-b897-7036-22b562a47c07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b3f5b03c64875dd",
            "arn": "arn:aws:ec2:ap-south-1:950708962312:elastic-ip/eipalloc-04b3f5b03c64875dd",
            "association_id": "eipassoc-03a0884e3fc703dd6",
            "domain": "vpc",
            "id": "eipalloc-04b3f5b03c64875dd",
            "instance": "i-0dbf06fddc2ccb6b4",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0cf73cae46d3be5a3",
            "private_dns": "ip-10-0-1-101.ap-south-1.compute.internal",
            "private_ip": "10.0.1.101",
            "public_dns": "ec2-13-204-189-53.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.189.53",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "blue-green-deployment-jenkins-eip"
            },
            "tags_all": {
              "Name": "blue-green-deployment-jenkins-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.jenkins",
            "aws_key_pair.jenkins",
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087d1c9a513324697",
            "arn": "arn:aws:ec2:ap-south-1:950708962312:instance/i-0dbf06fddc2ccb6b4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dbf06fddc2ccb6b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "blue-green-deployment-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cf73cae46d3be5a3",
            "private_dns": "ip-10-0-1-101.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.101",
            "public_dns": "ec2-13-233-167-235.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.167.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d35d770d5c21d51c",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08254ec181158385b",
            "tags": {
              "Name": "blue-green-deployment-jenkins-server"
            },
            "tags_all": {
              "Name": "blue-green-deployment-jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d5dc811d66c647a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.jenkins",
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950708962312:internet-gateway/igw-0212cc3548f0ffb88",
            "id": "igw-0212cc3548f0ffb88",
            "owner_id": "950708962312",
            "tags": {
              "Name": "blue-green-deployment-igw"
            },
            "tags_all": {
              "Name": "blue-green-deployment-igw"
            },
            "vpc_id": "vpc-0108cc47e7d45b665"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950708962312:route-table/rtb-0d44e7b8d5e2b9631",
            "id": "rtb-0d44e7b8d5e2b9631",
            "owner_id": "950708962312",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0212cc3548f0ffb88",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blue-green-deployment-public-rt"
            },
            "tags_all": {
              "Name": "blue-green-deployment-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0108cc47e7d45b665"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e06e3b61de2f6b8d",
            "route_table_id": "rtb-0d44e7b8d5e2b9631",
            "subnet_id": "subnet-08254ec181158385b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950708962312:security-group/sg-05d5dc811d66c647a",
            "description": "Security group for Jenkins server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d5dc811d66c647a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubernetes API",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NodePort Services",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "blue-green-deployment-jenkins-sg",
            "name_prefix": "",
            "owner_id": "950708962312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blue-green-deployment-jenkins-sg"
            },
            "tags_all": {
              "Name": "blue-green-deployment-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0108cc47e7d45b665"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950708962312:subnet/subnet-08254ec181158385b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08254ec181158385b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950708962312",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "blue-green-deployment-public-subnet"
            },
            "tags_all": {
              "Name": "blue-green-deployment-public-subnet"
            },
            "vpc_id": "vpc-0108cc47e7d45b665"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950708962312:vpc/vpc-0108cc47e7d45b665",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05565e878cfbb938a",
            "default_route_table_id": "rtb-0ec01e6e110051995",
            "default_security_group_id": "sg-011e59f48c4b06b85",
            "dhcp_options_id": "dopt-028e1372fbe0c7135",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0108cc47e7d45b665",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec01e6e110051995",
            "owner_id": "950708962312",
            "tags": {
              "Name": "blue-green-deployment-vpc"
            },
            "tags_all": {
              "Name": "blue-green-deployment-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}